error in p1- changed to p

--- a/Design/index.html
+++ b/Design/index.html
@@ -7,7 +7,7 @@
             background-size: cover;
         }
         h1{color:floralwhite;}
-        p1{color:whitesmoke;}
+        p{color:whitesmoke;}
      </style>
     <link rel="stylesheet" href="style.css">
 </head>
