--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <style>
         body {
-            background-image: url(https://github.com/KrishnaSolo/KrishnaSolo.github.io/blob/master/background.jpg);
-            background-size: cover;
+            background-image: url(background.jpg);
+           background-size: cover;
+           background-attachment: scroll;
+            
         }
         h1{color:floralwhite;}
         p{color:whitesmoke;}
      </style>
-    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
 <h1>AWESOMENESS LOADING</h1>
