--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         body {
-            background-image: url(background.jpg);
+            background-image: url("background.jpg");
            background-size: cover;
            background-attachment: scroll;
             
