updates style sheets with html template

--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-        body {
-            background-image: url(https://raw.githubusercontent.com/KrishnaSolo/KrishnaSolo.github.io/master/background.jpg);
-           background-size: cover;
-           background-attachment: scroll;
-            
-        }
-        h1{color:floralwhite;}
-        p{color:whitesmoke;}
-     </style>
-    
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>AWESOMENESS LOADING</h1>
