Added a header class to allow more control over padding and styling

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>AWESOMENESS LOADING</h1>
-<p>Page is currently under construction please come back later!<p>
-
+<div class="header">
+    <h1>AWESOMENESS LOADING</h1>
+</div>
 </body>
 
 </html>
