Added scroll feature and made custom heading

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        html {
+    scroll-behavior: smooth;
+    }
+     </style>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="header">
-    <h1>AWESOMENESS LOADING</h1>
+    <h1>WELCOME</h1>
 </div>
 </body>
 
