--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
+    <style>
+
+</style>
 </head>
 <body>
-<div class="header">
-    <h1>WELCOME</h1>
-</div>
+    <a href="about.html">WELCOME</a>
+
 </body>
 
 </html>
