Added nav elements

--- a/about1.html
+++ b/about1.html
@@ -10,6 +10,11 @@
     <div class="header">
         <h1>Krishna Solanki</h1>
     </div>
+    <div class="topnav">
+  <a href="#">About Me</a>
+  <a href="#">Projects</a>
+  <a href="#">Contact</a>
+</div>
 
 </body>
 
