updated landing page

--- a/about1.html
+++ b/about1.html
@@ -1,22 +1,48 @@
-
-﻿<!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style2.css">
-    <style>
-    </style>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style2.css">
 </head>
 <body>
-    <div class="header">
-        <h1>Krishna Solanki</h1>
-    </div>
-    <div class="topnav">
-  <a href="#">About Me</a>
-  <a href="#">Projects</a>
-  <a href="#">Contact</a>
+
+<div class="bgimg-1">
+  <div class="caption">
+  <span class="border">Krishna Solanki</span>
+  </div>
 </div>
 
-</body>
+<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+  <h3 style="text-align:center;">Bio</h3>
+  <p> Hi! My name is Krishna Solanki and I am an Innovator, Soccer Enthusiast and an a geek of all thing Quantum. I am currently studying at University of Toronto as a Computer Engineer, majoring in Machine Learning and Processors. Feel free to look at my previous works under projects and be sure to check out my social media. I am always looking for my next project so reach out if you want to collab to create some magic!</p>
+</div>
 
-</html>
+<div class="bgimg-2">
+  <div class="caption">
+  <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">Projects</span>
+  </div>
+</div>
+
+<div style="position:relative;">
+  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+  <p></p>
+  </div>
+</div>
+
+<div class="bgimg-3">
+  <div class="caption">
+  <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">Contact</span>
+  </div>
+</div>
+
+<div style="position:relative;">
+  <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+  <p></p>
+  </div>
+</div>
+
+<div class="bgimg-1">
+  <div class="caption">
+  <span class="border">Thank You!</span>
+  </div>
+</div>
 
