--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
             }
             
             .name{
-                padding-top: 5px;
+                display: block;
                 text-align: center;
                 color: white;
                 font-size: 28px;
                 line-height: 120%;
-                margin-left: -1cm;
                 font-weight: 600;
+                margin-left: -0.3cm;
             }
             .tagline{
-                padding-left: 10px;
+                display: block;
                 text-align:center;
                 color: grey;
                 font-size: 12px;
                 line-height: 150%;
-                margin-left: -1cm;
+                margin-left: -0.3cm;
             }
 
             #first{
@@ -41,7 +41,7 @@
               left: 0px;
               top: 0px;
               bottom: 0px; 
-              width: 25%;
+              width: 20%;
               padding: 30px 40px;
               border-color: black;
               background-color: #1d2630;
