--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <body>
 
         <ul>
-          <h1 class="name">Krishna Solanki</h2>
-          <h5 class="tagline">Physics, Coding and Football. <br/> In That Order.</h5>
+          <li><h1 class="name">Krishna Solanki</h2></li>
+          <li><h5 class="tagline">Physics, Coding and Football. <br/> In That Order.</h5></li>
           <li><a id="first" class="active" href="#About">ABOUT</a></li>
           <li><a href="#Project">PROJECTS</a></li>
           <li><a href="#Resume">RESUME</a></li>
