added project page

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home</title>
+        <title>Projects</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
@@ -88,19 +88,6 @@
                 color: #1d2630;
                 font-size: 16px;
             }
-            .img{
-              display: block;
-              margin: 33px auto 0px;
-              padding-top: 0px;
-              padding-right: 0px;
-              padding-left: 0px;
-              border-radius: 10px;
-              opacity: 0.9;
-              width: 100%;
-              max-width: 500px;
-              height: auto;
-              box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            }
 
             </style>
     </head>
@@ -111,28 +98,30 @@
           <li><h1 class="name">Krishna Solanki</h2></li>
           <li><h5 class="tagline">Physics, Coding and Football. <br/> In That Order.</h5></li>
           <li><hr style="text-align:left;color: #f0f0f0;"></li>
-          <li><a id="first" class="active" href="#About">ABOUT</a></li>
-          <li><a href="#Project">PROJECTS</a></li>
+          <li><a id="first"  href="index.html">ABOUT</a></li>
+          <li><a class="active" href="projects.html">PROJECTS</a></li>
           <li><a href="#Resume">RESUME</a></li>
           <li><a href="#Contact">CONTACT</a></li>
           <li><hr style="text-align:left;color: #f0f0f0;"></li>
         </ul>
         
         <div style="margin-left:23%; padding: 45px 75px;  height:100%;">
-          <h1 class="hIntro">About me</h1>
+          <h1 class="hIntro">Projects</h1>
           <p class="intro">
-            Hi! My name is Krishna Solanki and welcome to my site!
-            I am a student engineer passionate about using technology to help make the world
-            a better place, even if it is one person at a time.
-            I also enjoy football and am a proud supporter of FC Barcelona.
+            <em>“For the things we have to learn before we can do them, we learn by doing them.” </em>
+            <br> <em><b>- Aristotle</b></em>
           </p>
           <p class="intro">
-            I am currently in my 3rd year at the University of Toronto majoring in Computer Engineering and minoring in Artificial Intelligence.
-            Some of my interests include: Football, Astronomy, Machine Learning, Hardware Accelerators, Quantum Computing, and Riddles.
+              One of the hardest parts of doing projects whether software, hardware or otherwise, is facing
+              the fear of failing or not "knowing enough". The truth is <b>you will fail alot</b>, I cannot emphasize
+              how much you will suck. However as you go down the rabbit hole you will grow and learn more than you ever
+              could from books or all the blogs in the world. Do not be afraid to fail, do not worry about being imperfect 
+              because in all honesty perfection is overrated. Practice <b>does not</b> make perfect, <b>practice makes better</b>.
+              <br>
+              Below you can see some of my favourite projects. These projects have pushed me,
+              broken me and have put me back together, stronger than ever. I hope they inspire you to jump
+              into the unknown!
           </p>
-          <img class="img"
-          src="Me.jpg" alt="Picture of Krishna Solanki
-          width="500" height="600">
         </div>
         
         </body>
