--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
           <li><h1 class="name">Krishna Solanki</h2></li>
           <li><h5 class="tagline">Physics, Coding and Football. <br/> In That Order.</h5></li>
           <li><hr style="text-align:left;color: #f0f0f0;"></li>
-          <li><a id="first" class="active" href="#About">ABOUT</a></li>
-          <li><a href="#Project">PROJECTS</a></li>
+          <li><a id="first" class="active" href="index.html">ABOUT</a></li>
+          <li><a href="projects.html">PROJECTS</a></li>
           <li><a href="#Resume">RESUME</a></li>
           <li><a href="#Contact">CONTACT</a></li>
           <li><hr style="text-align:left;color: #f0f0f0;"></li>
