finished adding content for all pages + resume iframe

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Projects</title>
+        <title>Contact</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
@@ -89,6 +89,19 @@
                 font-size: 16px;
                 opacity: 0.8;
             }
+            .img{
+              display: block;
+              margin: 33px auto 0px;
+              padding-top: 0px;
+              padding-right: 0px;
+              padding-left: 0px;
+              border-radius: 10px;
+              opacity: 0.9;
+              width: 100%;
+              max-width: 500px;
+              height: auto;
+              box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            }
 
             </style>
     </head>
@@ -100,30 +113,23 @@
           <li><h5 class="tagline">Physics, Coding and Football. <br/> In That Order.</h5></li>
           <li><hr style="text-align:left;color: #f0f0f0;"></li>
           <li><a id="first"  href="index.html">ABOUT</a></li>
-          <li><a class="active" href="projects.html">PROJECTS</a></li>
+          <li><a href="projects.html">PROJECTS</a></li>
           <li><a href="resume.html">RESUME</a></li>
-          <li><a href="contact.html">CONTACT</a></li>
+          <li><a class="active" href="contact.html">CONTACT</a></li>
           <li><hr style="text-align:left;color: #f0f0f0;"></li>
         </ul>
         
         <div style="margin-left:23%; padding: 45px 75px;  height:100%;">
-          <h1 class="hIntro">Projects</h1>
+          <h1 class="hIntro">Contact me</h1>
           <p class="intro">
-            <em>“For the things we have to learn before we can do them, we learn by doing them.” </em>
-            <br> <em><b>- Aristotle</b></em>
+            If you would like to chat more whether about job/project opportunities, mentorship
+            or advice on interview prep/applying feel free to connect with me on Linkedin with
+            a message. Alternatively my email is open as well for the above.
+            <br><br>
+            If you would like to talk about my blog, physics, football or pretty much anything
+            else, shoot a message using the contact form below and I will get back to you in 2-3
+            business days!
           </p>
-          <p class="intro">
-              One of the hardest parts of doing projects whether software, hardware or otherwise, is facing
-              the fear of failing or not "knowing enough". The truth is <b>you will fail alot</b>, I cannot emphasize
-              how much you will suck. However as you go down the rabbit hole you will grow and learn more than you ever
-              could from books or all the blogs in the world. Do not be afraid to fail, do not worry about being imperfect 
-              because in all honesty perfection is impractical. Practice <b>does not</b> make perfect, <b>practice makes better</b>.
-              <br><br>
-              Below you can see some of my favourite projects. These projects have pushed me,
-              broken me and have put me back together, stronger than ever. I hope they inspire you to jump
-              into the unknown!
-          </p>
-        </div>
         
         </body>
 
