--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                 font-family: 'Open Sans', sans-serif;
                 color: #1d2630;
                 font-size: 16px;
+                opacity: 0.8;
             }
             .img{
               display: block;
@@ -113,8 +114,8 @@
           <li><hr style="text-align:left;color: #f0f0f0;"></li>
           <li><a id="first" class="active" href="index.html">ABOUT</a></li>
           <li><a href="projects.html">PROJECTS</a></li>
-          <li><a href="#Resume">RESUME</a></li>
-          <li><a href="#Contact">CONTACT</a></li>
+          <li><a href="resume.html">RESUME</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
           <li><hr style="text-align:left;color: #f0f0f0;"></li>
         </ul>
         
