--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <li><h5 class="tagline">Physics, Coding and Football. <br/> In That Order.</h5></li>
           <li><hr class="ab"></li>
           <li><a id="first" class="active" href="index.html">ABOUT</a></li>
-          <li><a href="#projects.html">PROJECTS</a></li>
+          <li><a href="projects.html">PROJECTS</a></li>
           <li><a href="resume.html">RESUME</a></li>
           <li><a href="contact.html">CONTACT</a></li>
           <li><hr class="ab"></li>
